# m2ds_data-stream-kafka

./: .gitignore  README.md  pyproject.toml  run.md  sentiment-analysis.ipynb
.github/workflows/: main.yml
script/: archives_tweets.py  filter_tweets.py  ingest_tweets.py  monitor-kafka.py  sentiment_tweets.py
src/m2ds_data_stream_kafka/: config.py  sentiment_analysis.py
tests/: test_sentiment_analysis.py
